[workspace]
resolver = "3"
members = [
    "omnidsp-core",
    "omnidsp-macros",
    "omnidsp-rustfft",
    "omnidsp",
    "omnidsp-testdata",
    "omnidsp-conformance",
]
# The wasm-bindgen visualiser engine (DEMO-00) is intentionally outside the core
# lint workspace: its generated glue does not meet the library's
# pedantic/nursery/forbid(unsafe_code) bar, and excluding it keeps `make check`
# clean and fast. Build it via `make wasm-pack`.
exclude = [
    "omnidsp-wasm",
]

[workspace.lints.rust]
unsafe_code = "forbid"
# Public APIs must be documented (the stated project standard); deny so an
# undocumented public item fails the gate rather than warning silently.
missing_docs = "deny"

[workspace.lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Hard denials — no agent should produce these
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"

# Force agents to justify exceptions
allow_attributes_without_reason = "deny"

# Dependencies
multiple_crate_versions = "allow"

# Publishing metadata — not a code quality concern
cargo_common_metadata = "allow"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[workspace.lints.rustdoc]
# A dangling `[`item`]` intra-doc link is a hard error, not a warning — the
# `cargo doc` step in `make check` otherwise lets a link to a renamed/removed
# item slip through silently (e.g. when a constructor namespace becomes an enum).
broken_intra_doc_links = "deny"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
