[workspace]
resolver = "3"
members = [
    "omnidsp-core",
    "omnidsp-macros",
    "omnidsp-rustfft",
    "omnidsp",
    "omnidsp-testdata",
    "omnidsp-conformance",
]
# The wasm-bindgen visualiser engine (DEMO-00) is intentionally outside the core
# lint workspace: its generated glue does not meet the library's
# pedantic/nursery/forbid(unsafe_code) bar, and excluding it keeps `make check`
# clean and fast. Build it via `make wasm-pack`.
#
# The Intel oneMKL vendor crates are excluded for two reasons: (1) they require
# `unsafe` (FFI), which cannot live under the workspace's inherited
# `forbid(unsafe_code)` / `[lints] workspace = true`, so each carries its own
# `[lints]`; (2) they link `libmkl_rt`, which is absent on the floor — keeping
# them out of the `--workspace` set means `make check` stays green without MKL.
# They build and test only in the Intel CI image (`make onemkl-check`), and
# `omnidsp` reaches `omnidsp-onemkl` as an optional path dependency behind the
# `onemkl` feature (a path dep needs no workspace membership).
exclude = [
    "omnidsp-wasm",
    "omnidsp-onemkl-sys",
    "omnidsp-onemkl",
]

[workspace.lints.rust]
unsafe_code = "forbid"
# Public APIs must be documented (the stated project standard); deny so an
# undocumented public item fails the gate rather than warning silently.
missing_docs = "deny"

[workspace.lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Hard denials — no agent should produce these
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"

# Force agents to justify exceptions
allow_attributes_without_reason = "deny"

# Dependencies
multiple_crate_versions = "allow"

# Publishing metadata — not a code quality concern
cargo_common_metadata = "allow"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[workspace.lints.rustdoc]
# A dangling `[`item`]` intra-doc link is a hard error, not a warning — the
# `cargo doc` step in `make check` otherwise lets a link to a renamed/removed
# item slip through silently (e.g. when a constructor namespace becomes an enum).
broken_intra_doc_links = "deny"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
