# pyproject.toml

# Specify the build system and its requirements
# pip needs these to know how to build the package.
# Even though Conda provides these, listing them here is good practice.
[build-system]
requires = [
    "scikit-build-core>=0.7", # Build backend
    "pybind11>=2.10",         # Needed for C++ bindings (header paths)
    "cmake>=3.21",            # Build system generator
]
build-backend = "scikit_build_core.build"

# Project metadata (PEP 621)
[project]
name = "omnidsp_py" # The name of your Python package
version = "1.0.0" # Your project's version
description = "High-Performance Cross-Platform DSP Library with Python Bindings"
readme = "README.md" # Link to your README file
license = { text = "Specify Your License (e.g., MIT, BSD-3-Clause)" } # Add your license info
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # Add author details
]
requires-python = ">=3.8" # Minimum Python version required

# Runtime dependencies (should match requirements.txt or environment.yml Python deps)
dependencies = [
    "numpy",
]

# URLs for project homepage, repository, etc. (Optional)
[project.urls]
Homepage = "https://github.com/m-wells/OmniDSP" # Example URL
Repository = "https://github.com/m-wells/OmniDSP" # Example URL

# Optional dependencies (e.g., for testing, development)
[project.optional-dependencies]
dev = [
    "pytest",
    # Add other dev tools like linters if desired
]

notebooks = [ # Or name it 'examples'
    "jupyterlab",
    "librosa",
    "matplotlib",
]

# Configuration for scikit-build-core
[tool.scikit-build]
# Directory containing the main CMakeLists.txt
cmake.source-dir = "."

# CMake arguments passed during configuration
# Ensure Python bindings are enabled when building via pip/scikit-build-core
cmake.args = [
    "-DOMNIDSP_BUILD_PYTHON_BINDINGS=ON",
    # You can add other CMake defines here if needed, e.g.,
    # "-DFFT_PREFER_ONEMKL=ON", # Uncomment to prefer MKL if building via pip
]

# Optional: Specify build directory (relative to source dir)
# cmake.build-dir = "_skbuild/{wheel_tag}"

# Optional: Install component configuration (less common with scikit-build-core)
# install.component = "..."

# Optional: Wheel configuration (e.g., disabling strip, though usually desired)
# wheel.strip = false

# Configuration for pytest (Optional)
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/python", # Assuming pytest runs from the root
]

# Add other tool configurations if needed (e.g., ruff, black, mypy)
