[package]
name = "highway-sys"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
links = "highway"

[build-dependencies]
cc = "1"

# Cannot use workspace = true because Cargo forbids overrides,
# and this -sys crate needs unsafe_code = "allow".
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"
allow_attributes_without_reason = "deny"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
