[package]
name = "omnidsp-conformance"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Shared backend-conformance suite for OmniDSP — one golden-vector test every backend is held to."
authors = ["Mark Wells"]
repository = "https://github.com/TwoWells/OmniDSP"

[lints]
workspace = true

[dependencies]
omnidsp-core = { path = "../omnidsp-core" }
omnidsp-testdata = { path = "../omnidsp-testdata" }
num-complex = "0.4"
num-traits = "0.2"
