[package]
name = "omnidsp-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Core library for OmniDSP — traits, types, and pure-Rust implementations."
authors = ["Mark Wells"]
repository = "https://github.com/TwoWells/OmniDSP"

[lints]
workspace = true

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
thiserror = "2"
