[package]
name = "omnidsp-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Core library for OmniDSP — traits, types, and pure-Rust implementations."
authors = ["Mark Wells"]
repository = "https://github.com/TwoWells/OmniDSP"

[lints]
workspace = true

[features]
# Exposes the single-FFT `SingleFftCqt` reference (otherwise `cfg(test)`-only)
# so the `cqt` benchmark can time the multirate path against the naive baseline.
bench = []

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
thiserror = "2"

[dev-dependencies]
omnidsp-rustfft = { path = "../omnidsp-rustfft" }

[[bench]]
name = "cqt"
harness = false
required-features = ["bench"]
