[package]
name = "omnidsp-ipp"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Intel IPP backend for OmniDSP (ipps FFT/DFT + vector ops)."
repository = "https://github.com/TwoWells/OmniDSP"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"
allow_attributes_without_reason = "deny"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[dependencies]
omnidsp-core = { path = "../omnidsp-core" }
omnidsp-macros = { path = "../omnidsp-macros" }
omnidsp-ipp-sys = { path = "../omnidsp-ipp-sys" }
num-complex = "0.4"

[dev-dependencies]
omnidsp-rustfft = { path = "../omnidsp-rustfft" }
omnidsp-conformance = { path = "../omnidsp-conformance" }
