[package]
name = "omnidsp-onemkl"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Intel oneMKL backend for OmniDSP (DFTI FFTs + VM/BLAS vector ops)."
repository = "https://github.com/TwoWells/OmniDSP"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"
allow_attributes_without_reason = "deny"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[dependencies]
omnidsp-core = { path = "../omnidsp-core" }
omnidsp-macros = { path = "../omnidsp-macros" }
omnidsp-onemkl-sys = { path = "../omnidsp-onemkl-sys" }
num-complex = "0.4"

[dev-dependencies]
omnidsp-rustfft = { path = "../omnidsp-rustfft" }
omnidsp-conformance = { path = "../omnidsp-conformance" }

[[bench]]
name = "dft"
harness = false

[[bench]]
name = "vecops"
harness = false

# Give the rustfft/realfft floor its fair showing in the head-to-head (MKL ships
# as a precompiled, runtime-dispatched .so; the Rust side is compiled from source
# here). opt-level 3 + LTO matches the workspace release intent. Not built with
# target-cpu=native, so this is the out-of-box rustfft vs MKL's AVX dispatch.
[profile.bench]
lto = true
codegen-units = 1
