[package]
name = "omnidsp"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "OmniDSP — composable DSP with pluggable backends."
authors = ["Mark Wells"]
repository = "https://github.com/TwoWells/OmniDSP"

[lints]
workspace = true

[dependencies]
omnidsp-core = { path = "../omnidsp-core" }
omnidsp-macros = { path = "../omnidsp-macros" }
omnidsp-rustfft = { path = "../omnidsp-rustfft" }

[dev-dependencies]
num-complex = "0.4"
num-traits = "0.2"
